fix: add media queries to fix logo on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1283,6 +1283,10 @@ h6 {
   .hero h2 {
     font-size: 32px;
   }
+  #logo {
+    width: 180px !important;
+    /* display: none; */
+  }
 }
 
 /*--------------------------------------------------------------
